/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 */

package com.tp6ej1;

/**
 *
 * @author luka.malegni
 */
public class Tp6ej1 {

    public static void main(String[] args) {
        System.out.println("Hello World!");
    }
}
